[tool.poetry]
name = "mockBomb"
version = "0.1.0"
description = "A project to make a mock bomb with a raspberry pi"
authors = ["Artic42 <main@artic42.com>"]
license = "MIT license"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
rpi-gpio = "^0.7.1"
articlib = "^0.2.3"
rpi-artic-lib = "^0.1.1"
requests = "^2.32.3"

[tool.poetry.group.dev.dependencies]
flake8-pyproject = "^1.2.3"
flake8 = "^7.1.1"
mypy = "^1.11.2"
types-rpi-gpio = "^0.7.0.20240314"
black = "^24.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.flake8]
exclude = [".venv", ".git", "__pycache__"]
max-line-length = 100